Kubernetes-Manifests-file/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: mainlb
#   namespace: three-tier
#   annotations:
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
#     # alb.ingress.kubernetes.io/subnets: "subnet-0aa439b4ddafcca10,subnet-0b95df318219145ca,subnet-0ccca36474902829a"
# spec:
#   ingressClassName: alb
#   rules:
#     - host: amanpathakdevops.study
#       http:
#         paths:
#           - path: /api
#             pathType: Prefix
#             backend:
#               service:
#                 name: api
#                 port:
#                   number: 3500
#           - path: /healthz
#             pathType: Exact
#             backend:
#               service:
#                 name: api
#                 port:
#                   number: 3500
#           - path: /ready
#             pathType: Exact
#             backend:
#               service:
#                 name: api
#                 port:
#                   number: 3500
#           - path: /started
#             pathType: Exact
#             backend:
#               service:
#                 name: api
#                 port:
#                   number: 3500
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend
#                 port:
#                   number: 3000


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: three-tier
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # Ensure paths work properly with NGINX
spec:
  ingressClassName: nginx  # This tells Kubernetes to use the NGINX Ingress Controller
  rules:
    - host: go-web-app.local  # Use localhost or a custom DNS if set up
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /ready
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /started
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
